Ajout du lien vers GitHub

--- a/Guide.tex
+++ b/Guide.tex
@@ -1053,12 +1053,21 @@ Quand on utilise PowerPoint, il est possible de présenter un diaporama sur un p
 Le logiciel qpdfpresenterconsole permet de faire la même chose avec des diaporamas en pdf, ce qui en fait un outil génial si vous utilisez Beamer.
 }
 
+\section{Améliorez ce guide}
+
 Ainsi s'achève cette introduction à LaTeX.
 Ce n'est qu'une introduction, pour que vous puissiez rapidement faire vos premiers projets sans faire n'importe quoi.
 Si vous voulez en savoir plus sur une commande ou une autre, vous pourrez trouver toutes sortes d'informations détaillées sur \url{en.wikibooks.org/wiki/LaTeX} (en anglais) ou \url{fr.wikibooks.org/wiki/LaTeX} (en français).
 N'oubliez pas que c'est à l'usage que vous progresserez, petite recherche google après petite recherche google, et dans quelques mois vous serez capables de faire à peu près n'importe quel document.\\
 
-Encore une chose, ce guide est sous license \emph{Creative Common}. Cela signifie que vous êtes libres de le redistribuer, de le faire tourner à vos amis et collègues et de le poster partout sur Internet. 
+Encore une chose, ce guide est sous license \emph{Creative Common}. Cela signifie que vous êtes libres de le redistribuer, de le faire tourner à vos amis et collègues et de le poster partout sur Internet.
+
+Cela veut aussi dire que vous avez le droit de le modifier pour l'améliorer.
+Il suffit pour cela d'aller sur la page GitHub~:
+
+\url{https://github.com/Nenuphar/latex-guide-fr}\\
+
+N'hésitez pas à faire des modifications, ne serait-ce que pour corriger des fautes d'orthographe. Il peut aussi être intéressant pour vous de jeter un œil au code source, pour avoir un exemple de vrai document LaTeX.\\
 
 \newpage
 \section{Aide-mémoire}
